# smart-mail-agent

./: .ap10.bak  .ap15.bak  .coverage  .coveragerc  .editorconfig  .env.example  .env.smtp-test  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak.20250818T032817  .ruff.toml  .ruff.toml.bak.20250818T105514  .ruffignore  404.html  A.  ALL_CODE_FOR_PASTE.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LOW_COVERAGE_FILES.txt  Makefile  README.md  README.md.bak  README.md.bak.20250813-081617  SECURITY.md  action_handler.py  apply_all_fixes.sh  apply_core_fixes.sh  apply_email_processor_and_testpkg_fixes.sh  apply_full_suite_fixes.sh  apply_patch_r9.py  apply_quotation_and_cli_fixes.sh  audit_bundle_20250816-130133.7z  cli.py  collector_out.txt  compat_shims_and_retry.sh  (+69 more)
.archive/: pyproject.toml.bak
.dev/: apply_classifier_fallback_fix_v1.py  cleanup_repo.py  generate_offline_report.py  make_share_bundle.sh  one_shot_patch_and_run.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.portfolio_hidden/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak.before-black-removal  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  SECURITY.md  bootstrap_project.py  mkdocs.yml  pytest.ini
_audit/: all_sources.txt  git_files.txt  python_files.txt
architecture/: index.html
audit_bundle_20250816-130133/: README_AUDIT_BUNDLE.txt
backup_dedup_20250811-172602/: init_db.py  run_pipeline.sh
cli/: index.html  run_classifier.py  run_llm_filter.py  run_main.py  run_orchestrator.py  run_rule_filter.py  run_spam_classifier.py  run_spam_filter.py  sma.py
config/: policy.yaml  spam_rules.yaml
configs/: ai_rpa_config.yaml  policy.yaml
data/: quote_log.db  quotes.db  sample_in.json  stats.db  tickets.db
diagnostics/: pip-freeze.txt  pipeline-tail.txt  support.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CRON_EXAMPLE.md  OPERATIONS.md  architecture.md  cli.md  index.md
features/: quotation.py
modules/: __init__.py  _spam_core.py  apply_diff.py  features_sales_notifier.py  inference_classifier.py  intent_classifier.py  log_writer_db.py  pdf_safe.py  quotation.py  quote_logger.py  sales_notifier.py  spam_filter.py  spamcheck.py
modules_legacy_backup_20250811-175517/: apply_diff.py  quotation.py  quote_logger.py
outputs/: quote_acme.txt
patches/: handle_router_patch.py  handle_safe_patch.py
pipeline/: main.py  main1.py
report_parts_support_bundle_20250823_132926_20250823_140612/: manifest.json
report_top10_support_bundle_20250823_132926_20250823_140915/: manifest.json
reports/: audit-last-collect.txt  audit-last-coverage.txt  audit-last.txt  audit-summary.md  coverage-offline.xml  coverage_info.txt  pytest_last.txt  spam_demo.json  spam_report.html  spam_scan.csv  spam_scan.html  spam_scan.json  tree-20250816-124354.txt  tree-20250816-124547.txt  tree-20250816-125335.txt  tree-20250816-125637.txt
review_pack/: index.tsv  pack_0001.txt  pack_0002.txt  pack_0003.txt  pack_0004.txt  pack_0005.txt  pack_0006.txt  pack_0007.txt  pack_0008.txt
samples/: nlp_demo.txt
scripts/: check_email_log.py  check_spam.py  ci_local.sh  cov_focus_modules.py  dev_seed_emails_log.py  docker_entry.sh  gen_all_testdata.py  gen_coverage_badge.sh  gen_testdata_pipeline.py  housekeeping.sh  imap_debug.py  init_users_db.py  list_gmail_folders.py  online_check.py  oss_snapshot.sh  run_all.py  run_forever.sh  run_pipeline.sh  run_pipeline_online.py  send_test_emails.py  setup_env.sh  test_imap_login.py  test_smtp.py  update_readme_badges.sh  wsl_docker_help.txt
search/: search_index.json
share/: CLEAN_TREE.txt  _snippet_20250817T061129.txt  filelist_part_aa  filelist_part_ab  filelist_part_ac  filelist_part_ad  filelist_part_ae  filelist_part_af  filelist_part_ag  filelist_part_ah  filelist_part_ai  filelist_part_aj  git_files.txt  (+13 more)
(+807 files in other folders)
