[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-mail-agent"
version = "0.3.1"
description = "Smart Mail Agent: AI + RPA email automation (clean, src-layout)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pydantic>=1.10,<3",
  "python-dotenv>=1.0",
  "jinja2>=3.1,<4",
  "reportlab>=3.6,<4",
]

[project.scripts]
sma = "smart_mail_agent.cli.sma:main"
sma-spamcheck = "smart_mail_agent.cli.sma_spamcheck:main"
run-action-handler = "run_action_handler:main"
send-with-attachment = "send_with_attachment:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["smart_mail_agent"]

# ---- Ruff（為相容性同時提供舊/新節點）----
# 舊版配置節點
[tool.ruff]
target-version = "py310"
select = ["E","F","I","B","UP"]
ignore = []
extend-exclude = []
# 測試、腳本、範例與過渡模組的 per-file-ignores（舊節點）
per-file-ignores = {
  "tests/**/*.py" = ["E401","E402","E701","E702","F811"],
  "examples/**/*.py" = ["E402","F401","F403"],
  "scripts/**/*.py" = ["E401","E402","E701","E702"],
  "modules/**/*.py" = ["E401","E402","E701","E702","F401","F403"]
}

# 新版配置節點（>=0.6 起）
[tool.ruff.lint]
select = ["E","F","I","B","UP"]
extend-ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E401","E402","E701","E702","F811"]
"examples/**/*.py" = ["E402","F401","F403"]
"scripts/**/*.py" = ["E401","E402","E701","E702"]
"modules/**/*.py" = ["E401","E402","E701","E702","F401","F403"]

[tool.ruff.format]
quote-style = "preserve"
